# itmo-ai-talent-hub-dl-and-nlp-course

./: .gitignore  .gitmodules  README.md  pyproject.toml
data/: .gitignore
notebooks/: hw_1.ipynb  hw_1_classic_ml.ipynb  hw_2.ipynb  hw_3.ipynb  hw_4.ipynb  hw_5.ipynb  hw_6.ipynb
weights/: .gitignore
