[project]
name = "itmo-ai-talent-hub-dl-and-nlp-course"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
hw_1 = [
    "corus>=0.10.0",
    "gensim>=4.4.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "navec>=0.10.0",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pyarrow>=17.0.0",
    "pymorphy3>=2.0.6",
    "razdel>=0.5.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "slovnet>=0.6.0",
    "tqdm>=4.67.3",
]
hw_2 = [
    "gensim>=4.4.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "navec>=0.10.0",
    "nbconvert>=7.17.0",
    "notebook>=7.5.5",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pyarrow>=17.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.3",
]
hw_3 = [
    "accelerate>=0.26.0",
    "datasets>=2.16.0",
    "evaluate>=0.4.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sentencepiece>=0.1.99",
    "seqeval>=1.2.2",
    "torch>=2.0.0",
    "tqdm>=4.67.3",
    "transformers>=4.36.0",
]
