[project]
name = "itmo-ai-talent-hub-dl-and-nlp-course"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
hw-6 = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.8.4",
    "einops>=0.8.2",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "notebook>=7.5.5",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "peft>=0.18.1",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.1",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformer-lens>=3.0.0",
    "transformers>=5.4.0",
    "trl>=1.1.0",
]
hw_1 = [
    "corus>=0.10.0",
    "gensim>=4.4.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "navec>=0.10.0",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pyarrow>=17.0.0",
    "pymorphy3>=2.0.6",
    "razdel>=0.5.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "slovnet>=0.6.0",
    "tqdm>=4.67.3",
]
hw_2 = [
    "gensim>=4.4.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "navec>=0.10.0",
    "nbconvert>=7.17.0",
    "notebook>=7.5.5",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pyarrow>=17.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.3",
]
hw_3 = [
    "accelerate>=0.26.0",
    "datasets>=2.16.0",
    "evaluate>=0.4.0",
    "ipykernel>=7.2.0",
    "notebook>=7.5.5",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "seaborn>=0.13.2",
    "sentencepiece>=0.1.99",
    "seqeval>=1.2.2",
    "torch>=2.0.0",
    "tqdm>=4.67.3",
    "transformers>=4.36.0",
]
hw_4 = [
    "bertopic>=0.16.0",
    "corus>=0.10.0",
    "gensim>=4.4.0",
    "hdbscan>=0.8.33",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "notebook>=7.5.5",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=2.2.0",
    "tqdm>=4.67.3",
    "umap-learn>=0.5.0",
]
hw_5 = [
    "accelerate>=0.26.0",
    "bitsandbytes>=0.41.0",
    "datasets>=2.16.0",
    "ipykernel>=7.2.0",
    "lm-eval>=0.4.0",
    "matplotlib>=3.10.8",
    "notebook>=7.5.5",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "peft>=0.4.0",
    "seaborn>=0.13.2",
    "sentencepiece>=0.1.99",
    "torch>=2.0.0",
    "tqdm>=4.67.3",
    "transformers>=4.36.0",
    "trl>=0.7.0",
]
